Now we can get the MD5 from recovery image, to enable nandroid backup or not
git-svn-id: http://cyanogen-updater.googlecode.com/svn/trunk@241 fa1c2e9a-81d2-11de-92f0-6bbadbc12360