@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 
 import android.util.Log;
 
@@ -20,7 +21,7 @@ public class IOUtils
     
     public static boolean checkMD5(String md5, File updateFile) throws IOException
     {
-    	String calculatedDigest = calculateMD5(updateFile);
+    	String calculatedDigest = calculateMD5(updateFile, false);
     	
     	Log.d(TAG, "Calculated digest: " + calculatedDigest);
 		Log.d(TAG, "Provided digest: " + md5);
@@ -28,12 +29,21 @@ public class IOUtils
 		return calculatedDigest.equalsIgnoreCase(md5);
 	}
 	
-    public static String calculateMD5(File updateFile) throws IOException
+    public static String calculateMD5(File updateFile, boolean su) throws IOException
     {
     	String calculatedDigest;
-		Process process = Runtime.getRuntime().exec(
-				new String[] { MD5_COMMAND, updateFile.getAbsolutePath() });
-
+    	Process process;
+		if (su)
+		{
+			process = Runtime.getRuntime().exec("su");
+	    	OutputStream os = process.getOutputStream();
+			os.write((MD5_COMMAND + " " + updateFile.getAbsolutePath()).getBytes());
+			os.flush();
+		}
+		else
+		{
+			process = Runtime.getRuntime().exec(new String[] { MD5_COMMAND, updateFile.getAbsolutePath() });
+		}
 		try
 		{
 			process.getOutputStream().close();
@@ -61,5 +71,27 @@ public class IOUtils
 		}
        	
     	return calculatedDigest;
+	}
+    
+    public static String getRecoveryMD5()
+	{
+		String MD5 = null;
+		try
+		{
+			File recovery = new File("/dev/mtd/mtd1");
+			if (recovery.exists())
+			{
+				MD5 = IOUtils.calculateMD5(recovery, true);
+				Log.d(TAG, "Recovery MD5: "+MD5);
+			}
+			else
+				throw new IOException();
+		}
+		catch (IOException e)
+		{
+			Log.e(TAG, "Error on checking recovery MD5. Message: ", e);
+			return null;
+		}
+		return MD5;
 	}
 }
